# brainbreaks

./: .checkpatch.conf  .travis.yml  CMakeLists.txt  README.md
src/: array.c  array.h  strings.c  strings.h  util.c  util.h
test/: test-array.c  test-strings.c
